bugfix(ui): reduce number of columns on list view due to overlap

--- a/styles/main.css
+++ b/styles/main.css
@@ -132,7 +132,7 @@ article img {
     display: grid;
     width: 100%;
     max-width: 100%;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 footer{
